# NotMoodle

./: .coveragerc  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  pytest.ini  report.xml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
NotMoodle/: .gitignore  conftest.py  coverage.xml  docker-compose.yml  manage.py  pytest_report.html  report.xml
NotMoodle/NotMoodle/: asgi.py  coverage.xml  report.xml  settings.py  settings_test.py  urls.py  wsgi.py
NotMoodle/assist/: __init__.py  admin.py  apps.py  models.py  ollama.py  urls.py  views.py
NotMoodle/assist/migrations/: 0001_enable_pgvector.py  0002_initial_models.py  0003_vector_index.py  0004_rename_assist_docu_lesson__a1b2c3_idx_assist_docu_lesson__9efbd5_idx_and_more.py
NotMoodle/assist/tests/: __init__.py  test_models.py  test_ollama.py  test_views.py
NotMoodle/classroom_and_grading/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
NotMoodle/classroom_and_grading/migrations/: 0001_initial.py  0002_alter_classroomstudent_options_and_more.py  0003_alter_classroomstudent_options.py  0004_remove_classroom_duration_days_and_more.py  0005_populate_end_date.py  0006_classroom_end_date.py  0007_alter_classroom_end_date.py  0008_assignmentgrade.py  0009_make_assignmentgrade_fields_nullable.py  0010_alter_assignmentgrade_graded_by_and_more.py
NotMoodle/classroom_and_grading/templates/: course_page.html
NotMoodle/classroom_and_grading/tests/: __init__.py  test_forms.py  test_models.py  (+1 more)
NotMoodle/course_management/: admin.py  forms.py  models.py  selectors.py  services.py  urls.py  urls_teachers.py  views.py
NotMoodle/lesson_management/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
NotMoodle/student_management/: admin.py  forms.py  models.py  pipeline.py  urls.py  views.py
NotMoodle/teachersManagement/: admin.py  apps.py  models.py  urls.py  views.py
NotMoodle/templates/: 404.html  base.html
NotMoodle/welcome_page/: admin.py  forms.py  models.py  urls.py  views.py
docs/: AI_ASSISTANT_GUIDE.md  DATABASE_SETUP_GUIDE.md  DELIVERABLES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PERSONALIZED_AI_SUMMARY.md  QUICK_START_PERSONALIZED_AI.md  README_NOTMOODLE_AI.md  TESTING_QUICK_START.md  TEST_COVERAGE_ANALYSIS.md  TEST_SETUP_SUMMARY.md
tests/: test_admin.py
(+99 files in other folders)
