# NotMoodle Python Project Configuration
# =======================================

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notmoodle"
version = "1.0.0"
description = "A Django-based Learning Management System"
requires-python = ">=3.10"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "NotMoodle.settings_test"
python_files = ["test_*.py", "*_test.py", "tests.py"]
python_classes = ["Test*", "*Test", "*TestCase"]
python_functions = ["test_*"]
testpaths = ["tests", "NotMoodle"]
addopts = [
    "--cov=NotMoodle",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml:coverage.xml",
    "--junitxml=report.xml",
    "--verbose",
    "--tb=short",
    "--showlocals",
    "--strict-markers",
    "-p", "no:warnings",
    "--reuse-db",
]
markers = [
    "unit: Unit tests (isolated, fast)",
    "integration: Integration tests (may touch database)",
    "api: API endpoint tests",
    "slow: Slow tests (e.g., with time.sleep or external calls)",
    "skip_ci: Skip in CI/CD pipeline",
]

[tool.coverage.run]
branch = true
source = ["NotMoodle"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/tests.py",
    "**/test_*.py",
    "manage.py",
    "*/wsgi.py",
    "*/asgi.py",
    "*/settings*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
sort = "Cover"

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.black]
line-length = 120
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | migrations
  | __pycache__
  | \.pytest_cache
  | \.mypy_cache
  | htmlcov
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/__pycache__/*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["migrations/", "venv/", "tests/"]

